# contree-cli

./: .gitignore  Makefile  README.md  pyproject.toml  test.contree.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  tests.yml
contree_cli/: __init__.py  __main__.py  agent.md  arguments.py  client.py  config.py  log.py  man.py  manual.md  mapped_file.py  migrations.py  output.py  refs.py  session.py  skill.py  skill_body.md  types.py  update_check.py
contree_cli/cli/: agent.py  auth.py  build.py  cat.py  cd.py  cp.py  env.py  file.py  images.py  kill.py  ls.py  operation.py  ps.py  run.py  session.py  show.py  skill.py  tag.py  use.py
contree_cli/docker/: __init__.py  context.py  dockerignore.py  keyword.py  kw_add.py  kw_arg.py  kw_copy.py  kw_env.py  kw_from.py  kw_run.py  kw_skipped.py  kw_user.py  kw_workdir.py  local_context.py  parser.py  url_fetch.py
contree_cli/shell/: __init__.py  argmap.py  argspec.py  cache.py  completer.py  history.py  parser.py  repl.py  sources.py  trie.py
docs/: Makefile  conf.py  index.md
docs/_static/: custom.css
docs/commands/: agent.md  auth.md  build.md  cat.md  cd.md  cp.md  env.md  file.md  images.md  index.md  kill.md  ls.md  operation.md  ps.md  run.md  session.md  shell.md  show.md  skill.md  tag.md  use.md
docs/ext/: ansi_html.py  ansi_svg.py  contree_doc_ext.py  terminal_ext.py
tests/: conftest.py  test_agent.py  test_argmap.py  test_auth.py  test_build.py  test_cat.py  test_cd.py  test_client.py  test_command_docs.py  test_config.py  test_cp.py  test_dockerfile.py  test_dockerignore.py  test_env.py  test_file_cmd.py  test_images.py  test_kill.py  test_log.py  test_ls.py  test_mapped_file.py  test_migrations.py  test_operation.py  test_output.py  test_ps.py  test_refs.py  test_run.py  test_session.py  test_session_cmd.py  test_shell_completer.py  test_shell_parser.py  test_shell_repl.py  test_show.py  test_skill.py  test_tag.py  test_trie.py  test_types.py  test_update_check.py  test_url_fetch.py  test_use.py
(+14 files in other folders)
